--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,41 +11,120 @@ body {
 }
 
 .top-header {
-  background-color: #d8b02b; /* green background like your image */
-  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 40px;
-  flex-wrap: wrap;
+  background: #f5f5f5;
+  padding: 12px 40px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+  border-bottom: 6px solid #f4dea3; 
+  font-family: "Poppins", sans-serif;
+  
 }
 
 .site-name {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: bold;
+  color: #000;
+  display: flex;
+  align-items: center;
+  gap: 6px;
 }
 
 .nav-links {
   display: flex;
+  justify-content: center;
   gap: 30px;
   flex-wrap: wrap;
 }
 
 .nav-links a {
-  background-color: #3a9443;
-  color: white;
-  padding: 10px 18px;
-  border: 2px solid #233b63;
-  border-radius: 8px;
   text-decoration: none;
   font-weight: 500;
-  transition: background-color 0.3s, transform 0.2s;
+  color: #222;
+  transition: color 0.3s;
 }
 
 .nav-links a:hover {
-  background-color: #355ca4;
-  transform: scale(1.25);
+  background-color: #e9ecef; 
+  color: #d26a1b; 
 }
+.tagline2 {
+  font-size: 0.95rem;
+  font-weight: 400;
+  color: #d47532;
+  flex: 1; 
+  text-align: center;    
+}
+.logo-section2 {
+  display: flex;
+  flex-direction: column; 
+  align-items: flex-start; 
+}
+
+.toggle-container {
+  display: inline-block;
+  position: relative;
+}
+
+.toggle-checkbox {
+  display: none;
+}
+
+.toggle-label {
+  width: 50px;
+  height: 25px;
+  background: #ddd;
+  border-radius: 30px;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 5px;
+  transition: background 0.3s;
+}
+
+.toggle-ball {
+  width: 20px;
+  height: 20px;
+  background: white;
+  border-radius: 50%;
+  position: absolute;
+  top: 2.5px;
+  left: 3px;
+  transition: transform 0.3s ease;
+}
+
+.sun-icon {
+  font-size: 14px;
+  color: #f9c74f;
+}
+
+.moon-icon {
+  font-size: 14px;
+  color: #577590;
+}
+
+.toggle-checkbox:checked + .toggle-label {
+  background: #444;
+}
+
+.toggle-checkbox:checked + .toggle-label .toggle-ball {
+  transform: translateX(25px);
+}
+.logo-img {
+  width: 50px;   
+  height: 50px; 
+  margin-right: 10px;
+  object-fit: contain; 
+}
+.logo-section {
+  display: flex;
+  align-items: center;   
+}
+
+
 
 header {
   position: relative;
